--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -34,14 +34,13 @@
 }
 
 .neutralColor {
-    /* background-color: #9B9EA3; */
-    background-color: #16B1FF;
+    background-color: #9B9EA3;
 }
 .greenColor {
-    background-color: #56CA00;
+    background-color: #2CABE3;
 }
 .redColor {
-    background-color: #FF4C51;
+    background-color: #FFC36D;
 }
 
 .marginRight {
