--- a/src/components/Main/Hero/MainHero.module.css
+++ b/src/components/Main/Hero/MainHero.module.css
@@ -22,7 +22,7 @@ More infos MODAL
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
 	background-color: white;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 .verticalAlign {
